{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 1181,
  "lineage": "7d436fce-2584-8463-9bd8-664206d26d7c",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0069aa073aac75299",
            "arn": "arn:aws:ec2:us-east-1:975050283031:instance/i-0cba59e88df7cff92",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "payjack-dev-us-east-1-admin-profile",
            "id": "i-0cba59e88df7cff92",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b8209a4842d7503c",
            "private_dns": "ip-10-0-3-217.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.217",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07c4cd4fbe1475115",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0c47e7868e2fa6c90"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04724e4dd10ec5c76",
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-admin-server",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-admin-server",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c47e7868e2fa6c90"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "security_groups"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "subnet_id"
              }
            ]
          ],
          "dependencies": [
            "module.compute.data.aws_ami.ubuntu",
            "module.compute.data.aws_iam_instance_profile.admin_profile",
            "module.compute.data.aws_ssm_parameter.admin_sg_id",
            "module.compute.data.aws_ssm_parameter.private_subnet_ids",
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.private",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_ssm_parameter.igw_id",
            "module.networking.aws_ssm_parameter.nat_id",
            "module.networking.aws_ssm_parameter.private_rt_id",
            "module.networking.aws_ssm_parameter.private_subnet_ids",
            "module.networking.aws_ssm_parameter.public_rt_id",
            "module.networking.aws_ssm_parameter.public_subnet_ids",
            "module.networking.aws_ssm_parameter.vpc_id",
            "module.networking.aws_subnet.app",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.data.aws_ssm_parameter.private_subnet_ids",
            "module.networking.data.aws_ssm_parameter.public_subnet_ids",
            "module.networking.data.aws_ssm_parameter.vpc_id",
            "module.security.aws_security_group.admin_sg",
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.asg_sg",
            "module.security.aws_security_group.elasticache_sg",
            "module.security.aws_security_group.kafka_sg",
            "module.security.aws_security_group.rds_sg",
            "module.security.aws_ssm_parameter.admin_sg_id",
            "module.security.aws_ssm_parameter.alb_sg_id",
            "module.security.aws_ssm_parameter.asg_sg_id",
            "module.security.aws_ssm_parameter.elasticache_sg_id",
            "module.security.aws_ssm_parameter.kafka_sg_id",
            "module.security.aws_ssm_parameter.rds_sg_id",
            "module.security.data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "payjack-dev-us-east-1-alb-logs",
                "enabled": true,
                "prefix": "dev"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975050283031:loadbalancer/app/payjack-dev-us-east-1-alb/38371124bab2e7f6",
            "arn_suffix": "app/payjack-dev-us-east-1-alb/38371124bab2e7f6",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "payjack-dev-us-east-1-alb-351471855.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:975050283031:loadbalancer/app/payjack-dev-us-east-1-alb/38371124bab2e7f6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "payjack-dev-us-east-1-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04a5d6c67502fc970"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05a52d8863a3f6005"
              },
              {
                "subnet_id": "subnet-0831b80cf45437aa9"
              }
            ],
            "subnets": [
              "subnet-05a52d8863a3f6005",
              "subnet-0831b80cf45437aa9"
            ],
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-alb",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-alb",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "vpc_id": "vpc-04da810f698d50a30",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "security_groups"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "subnets"
              }
            ]
          ],
          "dependencies": [
            "module.load_balancer.data.aws_s3_bucket.alb_logs",
            "module.load_balancer.data.aws_ssm_parameter.alb_sg_id",
            "module.load_balancer.data.aws_ssm_parameter.public_subnet_ids",
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.private",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_ssm_parameter.igw_id",
            "module.networking.aws_ssm_parameter.nat_id",
            "module.networking.aws_ssm_parameter.private_rt_id",
            "module.networking.aws_ssm_parameter.private_subnet_ids",
            "module.networking.aws_ssm_parameter.public_rt_id",
            "module.networking.aws_ssm_parameter.public_subnet_ids",
            "module.networking.aws_ssm_parameter.vpc_id",
            "module.networking.aws_subnet.app",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.data.aws_ssm_parameter.private_subnet_ids",
            "module.networking.data.aws_ssm_parameter.public_subnet_ids",
            "module.networking.data.aws_ssm_parameter.vpc_id",
            "module.security.aws_security_group.admin_sg",
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.asg_sg",
            "module.security.aws_security_group.elasticache_sg",
            "module.security.aws_security_group.kafka_sg",
            "module.security.aws_security_group.rds_sg",
            "module.security.aws_ssm_parameter.admin_sg_id",
            "module.security.aws_ssm_parameter.alb_sg_id",
            "module.security.aws_ssm_parameter.asg_sg_id",
            "module.security.aws_ssm_parameter.elasticache_sg_id",
            "module.security.aws_ssm_parameter.kafka_sg_id",
            "module.security.aws_ssm_parameter.rds_sg_id",
            "module.security.data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975050283031:targetgroup/payjack-dev-us-east-1-tg/5691412671d48fe9",
            "arn_suffix": "targetgroup/payjack-dev-us-east-1-tg/5691412671d48fe9",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:975050283031:targetgroup/payjack-dev-us-east-1-tg/5691412671d48fe9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "payjack-dev-us-east-1-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-tg",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-tg",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-04da810f698d50a30"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "module.load_balancer.data.aws_ssm_parameter.vpc_id",
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.private",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_ssm_parameter.igw_id",
            "module.networking.aws_ssm_parameter.nat_id",
            "module.networking.aws_ssm_parameter.private_rt_id",
            "module.networking.aws_ssm_parameter.private_subnet_ids",
            "module.networking.aws_ssm_parameter.public_rt_id",
            "module.networking.aws_ssm_parameter.public_subnet_ids",
            "module.networking.aws_ssm_parameter.vpc_id",
            "module.networking.aws_subnet.app",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.data.aws_ssm_parameter.private_subnet_ids",
            "module.networking.data.aws_ssm_parameter.public_subnet_ids",
            "module.networking.data.aws_ssm_parameter.vpc_id",
            "module.security.aws_security_group.admin_sg",
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.asg_sg",
            "module.security.aws_security_group.elasticache_sg",
            "module.security.aws_security_group.kafka_sg",
            "module.security.aws_security_group.rds_sg",
            "module.security.aws_ssm_parameter.admin_sg_id",
            "module.security.aws_ssm_parameter.alb_sg_id",
            "module.security.aws_ssm_parameter.asg_sg_id",
            "module.security.aws_ssm_parameter.elasticache_sg_id",
            "module.security.aws_ssm_parameter.kafka_sg_id",
            "module.security.aws_ssm_parameter.rds_sg_id",
            "module.security.data.aws_ssm_parameter.vpc_id"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b9d795469b7961c0",
            "arn": "arn:aws:ec2:us-east-1:975050283031:elastic-ip/eipalloc-0b9d795469b7961c0",
            "domain": "vpc",
            "id": "eipalloc-0b9d795469b7961c0",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-203-34-54.compute-1.amazonaws.com",
            "public_ip": "52.203.34.54",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-nat-eip-1",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-nat-eip-1",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "vpc": true
          },
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b930fab1182faeb3",
            "arn": "arn:aws:ec2:us-east-1:975050283031:elastic-ip/eipalloc-0b930fab1182faeb3",
            "domain": "vpc",
            "id": "eipalloc-0b930fab1182faeb3",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-80-25-146.compute-1.amazonaws.com",
            "public_ip": "54.80.25.146",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-nat-eip-2",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-nat-eip-2",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "vpc": true
          },
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01578c59b8792ee96",
            "arn": "arn:aws:ec2:us-east-1:975050283031:elastic-ip/eipalloc-01578c59b8792ee96",
            "domain": "vpc",
            "id": "eipalloc-01578c59b8792ee96",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-211-114-231.compute-1.amazonaws.com",
            "public_ip": "18.211.114.231",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-nat-eip-3",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-nat-eip-3",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050283031:internet-gateway/igw-04fe91a88ed642765",
            "id": "igw-04fe91a88ed642765",
            "owner_id": "975050283031",
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-igw",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-igw",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "vpc_id": "vpc-04da810f698d50a30"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "module.networking.aws_ssm_parameter.vpc_id",
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b9d795469b7961c0",
            "association_id": "eipassoc-0898604802ec72c6c",
            "connectivity_type": "public",
            "id": "nat-0d8a9f754e4b3d303",
            "network_interface_id": "eni-0d3e6b34f20e508ae",
            "private_ip": "10.0.0.41",
            "public_ip": "52.203.34.54",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05a52d8863a3f6005",
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-nat-gateway-1",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-nat-gateway-1",
              "Owner": "mimi",
              "Project": "payjack"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b930fab1182faeb3",
            "association_id": "eipassoc-0fd637e19acaeff34",
            "connectivity_type": "public",
            "id": "nat-01ac09aa26b26f68e",
            "network_interface_id": "eni-025730104d6a18838",
            "private_ip": "10.0.1.125",
            "public_ip": "54.80.25.146",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0831b80cf45437aa9",
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-nat-gateway-2",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-nat-gateway-2",
              "Owner": "mimi",
              "Project": "payjack"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01578c59b8792ee96",
            "association_id": "eipassoc-06b4b43e99b373ad7",
            "connectivity_type": "public",
            "id": "nat-0e3b108907ea23f60",
            "network_interface_id": "eni-0739e71114c5916c8",
            "private_ip": "10.0.0.202",
            "public_ip": "18.211.114.231",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05a52d8863a3f6005",
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-nat-gateway-3",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-nat-gateway-3",
              "Owner": "mimi",
              "Project": "payjack"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050283031:route-table/rtb-0a4476f86f654de9f",
            "id": "rtb-0a4476f86f654de9f",
            "owner_id": "975050283031",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d8a9f754e4b3d303",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-private-rtb-1",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-private-rtb-1",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "timeouts": null,
            "vpc_id": "vpc-04da810f698d50a30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050283031:route-table/rtb-04c89aff225b41c66",
            "id": "rtb-04c89aff225b41c66",
            "owner_id": "975050283031",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01ac09aa26b26f68e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-private-rtb-2",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-private-rtb-2",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "timeouts": null,
            "vpc_id": "vpc-04da810f698d50a30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050283031:route-table/rtb-0073b059485445f45",
            "id": "rtb-0073b059485445f45",
            "owner_id": "975050283031",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e3b108907ea23f60",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-private-rtb-3",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-private-rtb-3",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "timeouts": null,
            "vpc_id": "vpc-04da810f698d50a30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050283031:route-table/rtb-0d694bf2b278cee62",
            "id": "rtb-0d694bf2b278cee62",
            "owner_id": "975050283031",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04fe91a88ed642765",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-public-rtb",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-public-rtb",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "timeouts": null,
            "vpc_id": "vpc-04da810f698d50a30"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "route"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_ssm_parameter.igw_id",
            "module.networking.aws_ssm_parameter.vpc_id",
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012b5d2d1ab3a6b9c",
            "route_table_id": "rtb-0a4476f86f654de9f",
            "subnet_id": "subnet-04724e4dd10ec5c76"
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078256ac16b8b2401",
            "route_table_id": "rtb-04c89aff225b41c66",
            "subnet_id": "subnet-060f6afa91d17c624"
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9e1307bfc381303",
            "route_table_id": "rtb-0073b059485445f45",
            "subnet_id": "subnet-026f9bfa770db9321"
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08cc72668bbfe6888",
            "route_table_id": "rtb-0d694bf2b278cee62",
            "subnet_id": "subnet-05a52d8863a3f6005"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "route_table_id"
              }
            ]
          ],
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_ssm_parameter.igw_id",
            "module.networking.aws_ssm_parameter.public_rt_id",
            "module.networking.aws_ssm_parameter.vpc_id",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d322f4aeffd0d2b",
            "route_table_id": "rtb-0d694bf2b278cee62",
            "subnet_id": "subnet-0831b80cf45437aa9"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "route_table_id"
              }
            ]
          ],
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_ssm_parameter.igw_id",
            "module.networking.aws_ssm_parameter.public_rt_id",
            "module.networking.aws_ssm_parameter.vpc_id",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08cc72668bbfe6888",
            "route_table_id": "rtb-0d694bf2b278cee62",
            "subnet_id": "subnet-05a52d8863a3f6005"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "route_table_id"
              }
            ]
          ],
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_ssm_parameter.igw_id",
            "module.networking.aws_ssm_parameter.public_rt_id",
            "module.networking.aws_ssm_parameter.vpc_id",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050283031:subnet/subnet-0c6d87d1bf89fc364",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6d87d1bf89fc364",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050283031",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-app-subnet-1",
              "Owner": "mimi",
              "Project": "payjack",
              "Type": "Private",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-app-subnet-1",
              "Owner": "mimi",
              "Project": "payjack",
              "Type": "Private",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04da810f698d50a30"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050283031:subnet/subnet-05ef20bc90d8e47fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ef20bc90d8e47fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050283031",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-app-subnet-2",
              "Owner": "mimi",
              "Project": "payjack",
              "Type": "Private",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-app-subnet-2",
              "Owner": "mimi",
              "Project": "payjack",
              "Type": "Private",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04da810f698d50a30"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050283031:subnet/subnet-02db799b59d824f86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02db799b59d824f86",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050283031",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-app-subnet-3",
              "Owner": "mimi",
              "Project": "payjack",
              "Type": "Private",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-app-subnet-3",
              "Owner": "mimi",
              "Project": "payjack",
              "Type": "Private",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04da810f698d50a30"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050283031:subnet/subnet-04724e4dd10ec5c76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04724e4dd10ec5c76",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050283031",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-private-subnet-1",
              "Owner": "mimi",
              "Project": "payjack",
              "Type": "Private",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-private-subnet-1",
              "Owner": "mimi",
              "Project": "payjack",
              "Type": "Private",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04da810f698d50a30"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050283031:subnet/subnet-060f6afa91d17c624",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060f6afa91d17c624",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050283031",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-private-subnet-2",
              "Owner": "mimi",
              "Project": "payjack",
              "Type": "Private",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-private-subnet-2",
              "Owner": "mimi",
              "Project": "payjack",
              "Type": "Private",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04da810f698d50a30"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050283031:subnet/subnet-026f9bfa770db9321",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-026f9bfa770db9321",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050283031",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-private-subnet-3",
              "Owner": "mimi",
              "Project": "payjack",
              "Type": "Private",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-private-subnet-3",
              "Owner": "mimi",
              "Project": "payjack",
              "Type": "Private",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04da810f698d50a30"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050283031:subnet/subnet-05a52d8863a3f6005",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a52d8863a3f6005",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975050283031",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-public-subnet-1",
              "Owner": "mimi",
              "Project": "payjack",
              "Type": "Public",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-public-subnet-1",
              "Owner": "mimi",
              "Project": "payjack",
              "Type": "Public",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04da810f698d50a30"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050283031:subnet/subnet-0831b80cf45437aa9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0831b80cf45437aa9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975050283031",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-public-subnet-2",
              "Owner": "mimi",
              "Project": "payjack",
              "Type": "Public",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-public-subnet-2",
              "Owner": "mimi",
              "Project": "payjack",
              "Type": "Public",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04da810f698d50a30"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050283031:vpc/vpc-04da810f698d50a30",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0676c0207cf8b4979",
            "default_route_table_id": "rtb-0e63936eb9de314dd",
            "default_security_group_id": "sg-00fa6b64aa3084db8",
            "dhcp_options_id": "dopt-0d229bc838471357d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04da810f698d50a30",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e63936eb9de314dd",
            "owner_id": "975050283031",
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-vpc",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-vpc",
              "Owner": "mimi",
              "Project": "payjack"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "admin_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050283031:security-group/sg-0c47e7868e2fa6c90",
            "description": "Security group for Bastion Host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow traffic to anywhere",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c47e7868e2fa6c90",
            "ingress": [],
            "name": "payjack-dev-us-east-1-admin-sg",
            "name_prefix": "",
            "owner_id": "975050283031",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04da810f698d50a30"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.private",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_ssm_parameter.igw_id",
            "module.networking.aws_ssm_parameter.nat_id",
            "module.networking.aws_ssm_parameter.private_rt_id",
            "module.networking.aws_ssm_parameter.private_subnet_ids",
            "module.networking.aws_ssm_parameter.public_rt_id",
            "module.networking.aws_ssm_parameter.public_subnet_ids",
            "module.networking.aws_ssm_parameter.vpc_id",
            "module.networking.aws_subnet.app",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.data.aws_ssm_parameter.private_subnet_ids",
            "module.networking.data.aws_ssm_parameter.public_subnet_ids",
            "module.networking.data.aws_ssm_parameter.vpc_id",
            "module.security.data.aws_ssm_parameter.vpc_id"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050283031:security-group/sg-04a5d6c67502fc970",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic to anywhere",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04a5d6c67502fc970",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS traffic to ALB",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "payjack-dev-us-east-1-alb-sg",
            "name_prefix": "",
            "owner_id": "975050283031",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-alb-sg",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-alb-sg",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "timeouts": null,
            "vpc_id": "vpc-04da810f698d50a30"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.private",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_ssm_parameter.igw_id",
            "module.networking.aws_ssm_parameter.nat_id",
            "module.networking.aws_ssm_parameter.private_rt_id",
            "module.networking.aws_ssm_parameter.private_subnet_ids",
            "module.networking.aws_ssm_parameter.public_rt_id",
            "module.networking.aws_ssm_parameter.public_subnet_ids",
            "module.networking.aws_ssm_parameter.vpc_id",
            "module.networking.aws_subnet.app",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.data.aws_ssm_parameter.private_subnet_ids",
            "module.networking.data.aws_ssm_parameter.public_subnet_ids",
            "module.networking.data.aws_ssm_parameter.vpc_id",
            "module.security.data.aws_ssm_parameter.vpc_id"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "asg_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050283031:security-group/sg-0ac42e3052a35fba4",
            "description": "Security group for ASG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic to anywhere",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ac42e3052a35fba4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH traffic from anywhere",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "payjack-dev-us-east-1-asg-sg",
            "name_prefix": "",
            "owner_id": "975050283031",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-asg-sg",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-asg-sg",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "timeouts": null,
            "vpc_id": "vpc-04da810f698d50a30"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.private",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_ssm_parameter.igw_id",
            "module.networking.aws_ssm_parameter.nat_id",
            "module.networking.aws_ssm_parameter.private_rt_id",
            "module.networking.aws_ssm_parameter.private_subnet_ids",
            "module.networking.aws_ssm_parameter.public_rt_id",
            "module.networking.aws_ssm_parameter.public_subnet_ids",
            "module.networking.aws_ssm_parameter.vpc_id",
            "module.networking.aws_subnet.app",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.data.aws_ssm_parameter.private_subnet_ids",
            "module.networking.data.aws_ssm_parameter.public_subnet_ids",
            "module.networking.data.aws_ssm_parameter.vpc_id",
            "module.security.data.aws_ssm_parameter.vpc_id"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elasticache_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050283031:security-group/sg-00d75094025a57465",
            "description": "Security group for ElastiCache",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic to anywhere",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00d75094025a57465",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow traffic from anywhere",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "payjack-dev-us-east-1-elasticache-sg",
            "name_prefix": "",
            "owner_id": "975050283031",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-elasticache-sg",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-elasticache-sg",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "timeouts": null,
            "vpc_id": "vpc-04da810f698d50a30"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.private",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_ssm_parameter.igw_id",
            "module.networking.aws_ssm_parameter.nat_id",
            "module.networking.aws_ssm_parameter.private_rt_id",
            "module.networking.aws_ssm_parameter.private_subnet_ids",
            "module.networking.aws_ssm_parameter.public_rt_id",
            "module.networking.aws_ssm_parameter.public_subnet_ids",
            "module.networking.aws_ssm_parameter.vpc_id",
            "module.networking.aws_subnet.app",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.data.aws_ssm_parameter.private_subnet_ids",
            "module.networking.data.aws_ssm_parameter.public_subnet_ids",
            "module.networking.data.aws_ssm_parameter.vpc_id",
            "module.security.data.aws_ssm_parameter.vpc_id"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kafka_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050283031:security-group/sg-0e54019c5bab90554",
            "description": "Security group for Kafka",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic to anywhere",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e54019c5bab90554",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow traffic from anywhere",
                "from_port": 9092,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9092
              }
            ],
            "name": "payjack-dev-us-east-1-kafka-sg",
            "name_prefix": "",
            "owner_id": "975050283031",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-kafka-sg",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-kafka-sg",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "timeouts": null,
            "vpc_id": "vpc-04da810f698d50a30"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.private",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_ssm_parameter.igw_id",
            "module.networking.aws_ssm_parameter.nat_id",
            "module.networking.aws_ssm_parameter.private_rt_id",
            "module.networking.aws_ssm_parameter.private_subnet_ids",
            "module.networking.aws_ssm_parameter.public_rt_id",
            "module.networking.aws_ssm_parameter.public_subnet_ids",
            "module.networking.aws_ssm_parameter.vpc_id",
            "module.networking.aws_subnet.app",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.data.aws_ssm_parameter.private_subnet_ids",
            "module.networking.data.aws_ssm_parameter.public_subnet_ids",
            "module.networking.data.aws_ssm_parameter.vpc_id",
            "module.security.data.aws_ssm_parameter.vpc_id"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050283031:security-group/sg-05e5b8826517b5f2f",
            "description": "Allow MySQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05e5b8826517b5f2f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "payjack-dev-us-east-1-rds-sg",
            "name_prefix": "",
            "owner_id": "975050283031",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-rds-sg",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "terraform",
              "Name": "payjack-dev-us-east-1-rds-sg",
              "Owner": "mimi",
              "Project": "payjack"
            },
            "timeouts": null,
            "vpc_id": "vpc-04da810f698d50a30"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.private",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_ssm_parameter.igw_id",
            "module.networking.aws_ssm_parameter.nat_id",
            "module.networking.aws_ssm_parameter.private_rt_id",
            "module.networking.aws_ssm_parameter.private_subnet_ids",
            "module.networking.aws_ssm_parameter.public_rt_id",
            "module.networking.aws_ssm_parameter.public_subnet_ids",
            "module.networking.aws_ssm_parameter.vpc_id",
            "module.networking.aws_subnet.app",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.data.aws_ssm_parameter.private_subnet_ids",
            "module.networking.data.aws_ssm_parameter.public_subnet_ids",
            "module.networking.data.aws_ssm_parameter.vpc_id",
            "module.security.data.aws_ssm_parameter.vpc_id"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}